--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <script language="javascript">
     function show_date_time() {
         window.setTimeout("show_date_time()", 1000);
-        BirthDay = new Date("5/25/2014");//这个日期是可以修改的
+        BirthDay = new Date("01/21/2005");//这个日期是可以修改的
         today = new Date();
         timeold = (today.getTime() - BirthDay.getTime());
         sectimeold = timeold / 1000
@@ -123,7 +123,7 @@
         e_minsold = (e_hrsold - hrsold) * 60;
         minsold = Math.floor((e_hrsold - hrsold) * 60);
         seconds = Math.floor((e_minsold - minsold) * 60);
-        span_dt_dt.innerHTML = daysold + "天" + hrsold + "小时" + minsold + "分" + seconds + "秒";
+        span_dt_dt.innerHTML = daysold + "days" + hrsold + "hours" + minsold + "minutes" + seconds + "seconds";
     }
 
     show_date_time();
@@ -134,7 +134,8 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			//想说的话
-            S.UI.simulate("旧毛|I'm|老夏|21|岁|生|日|快|乐|#countdown 3|#time");
+            S.UI.simulate("Shifa|Happy|20th|Birthday!|🎉✨|May|your|day|be|as|amazing|as|you|are,|filled|with|love,|laughter,|and|unforgettable|memories.|Welcome|to|your|twenties—here’s|to|chasing|dreams|and|making|them|come|true!|🥳🎂💖");
+
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
