--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             background-size: cover;
             border-radius: 200px;
             box-shadow: 0px 0px 40px rgba(63, 81, 181, 0.72);
-            border: 3px solid #00a0ff;
+            border: 3px solid #fff9f1;
             opacity: 1;
             margin: 0 auto;
             margin-top: 20px;
@@ -103,7 +103,7 @@
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ffffff;">
-    Its Its been:
+    Its been:
     <br/>
     <span id="span_dt_dt"></span>
 </p>
