--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			//想说的话
-            S.UI.simulate("Shifa|Happy|20th|Birthday!|🎉✨|May|your|day|be|as|amazing|as|you|are,|filled|with|love,|laughter,|and|unforgettable|memories.|Welcome|to|your|twenties—here’s|to|chasing|dreams|and|making|them|come|true!|🥳🎂💖");
-
+            S.UI.simulate("Shifa|Happy|20th|Birth|day!|🎉✨|May|your|day|be|as|amaz|ing|you|are,|filled|with|dreams|and|making|them|come|true!|🥳🎂💖");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
